--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Front End Course Directory</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link rel='stylesheet prefetch' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/104946/animate.min.css'>
   </head>
   <body>
     <div id="root"></div>
